failures section added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,28 @@
         <button class="btn btn-primary">Start planning today!</button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="failures-section wrapper">
+        <div class="failures-left">
+          <img src="./images/person.png" alt="Person photo" />
+        </div>
+        <div class="failures-right">
+          <h2>My failures of previous year</h2>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <ul>
+            <li>✔️ Contrary to popular belief, is not simply.</li>
+            <li>✔️ Contrary to popular belief.</li>
+            <li>✔️ Contrary to popular , is not simply.</li>
+            <li>✔️ Contrary to popular belief, is not simply.</li>
+            <li>✔️ Contrary to popular simply.</li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
