plans section done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
           </ul>
         </div>
       </section>
+      <section class="plans-section wrapper">
+        <h2>My Plans</h2>
+        <div class="plans">
+          <div class="plan">
+            <img src="./images/icons/web.png" alt="Web development icon" />
+            <h3>Web Development</h3>
+            <p>I want to start</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/js.png" alt="Javascript icon" />
+            <h3>JavaScript</h3>
+            <p>I want to learn</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/smoke.png" alt="Smoking icon" />
+            <h3>Smoking Habit</h3>
+            <p>I want to end</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/ecom.png" alt="Ecommerce icon" />
+            <h3>E-Commerce</h3>
+            <p>I want to build</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
