--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>New Year New Me</title>
   </head>
   <body>
@@ -64,6 +64,10 @@
             <p>I want to build</p>
           </div>
         </div>
+      </section>
+      <section class="cta">
+        <h2>Always keep a positive mindset</h2>
+        <button class="btn">Call now</button>
       </section>
     </main>
     <footer></footer>
