--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
         <button class="btn">Call now</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-left">
+        <h3>New Year New Me</h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <p>Email: info@newyear.com</p>
+        <p>Phone: 123-456-789</p>
+        <div class="icons">
+          <img src="./images/icons/fb.png" alt="Facebook icon" />
+          <img src="./images/icons/twitter.png" alt="Twitter icon" />
+          <img src="./images/icons/youtube.png" alt="Youtube icon" />
+        </div>
+      </div>
+      <div class="footer-right">
+        <h4>Subscribe</h4>
+        <input type="email" placeholder="Enter your email" required />
+        <button class="btn">Subscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
