download software section done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+    <!-- stylesheet -->
     <link rel="stylesheet" href="./styles.css" />
     <title>New Year New Me</title>
   </head>
@@ -20,6 +26,7 @@
       </div>
     </header>
     <main>
+      <!-- failures starts -->
       <section class="failures-section wrapper">
         <div class="failures-left">
           <img src="./images/person.png" alt="Person photo" />
@@ -40,6 +47,40 @@
           </ul>
         </div>
       </section>
+
+      <!-- download starts -->
+      <section class="download wrapper">
+        <div class="download-left">
+          <h2>
+            Download our planning software on your device,
+            <span>it's free!</span>
+          </h2>
+          <p>Select your device:</p>
+          <div class="devices">
+            <div class="device">
+              <span><i class="fa-brands fa-windows"></i></span>
+              <h3>Windows</h3>
+            </div>
+            <div class="device">
+              <span><i class="fa-brands fa-apple"></i></span>
+              <h3>Mac</h3>
+            </div>
+            <div class="device">
+              <span><i class="fa-brands fa-linux"></i></span>
+              <h3>Linux</h3>
+            </div>
+          </div>
+          <button class="btn btn-primary">Download now</button>
+        </div>
+        <div class="download-right">
+          <img
+            src="./images/software-illustration.jpg"
+            alt="Software illustration photo"
+          />
+        </div>
+      </section>
+
+      <!-- plans starts -->
       <section class="plans-section wrapper">
         <h2>My Plans</h2>
         <div class="plans">
@@ -65,6 +106,8 @@
           </div>
         </div>
       </section>
+
+      <!-- cta starts -->
       <section class="cta">
         <h2>Always keep a positive mindset</h2>
         <button class="btn">Call now</button>
